chore: add commitlint libraries

--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["API", "timestamp", "unix", "utc"],
+  "keywords": [
+    "API",
+    "timestamp",
+    "unix",
+    "utc"
+  ],
   "author": "Luiz Wendel",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
+    "husky": "^7.0.4"
+  }
 }
