--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
     "husky": "^7.0.4"
+  },
+  "dependencies": {
+    "colors": "^1.4.0",
+    "express": "^4.17.1"
   }
 }
