chore: add nodemon

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
-    "husky": "^7.0.4"
+    "husky": "^7.0.4",
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
     "colors": "^1.4.0",
