--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Microservice API for timestamps",
   "main": "src/index.js",
   "scripts": {
+    "dev": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
